Fixed footer z-index

--- a/src/sass/freesewing/_footer.scss
+++ b/src/sass/freesewing/_footer.scss
@@ -4,6 +4,7 @@ footer {
 .footer {
   position: relative;
   overflow: hidden;
+  z-index: -1;
 }
 
 .footer .skew:after {
